# RadaMassiveResourcePlanning

./: .gitignore  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  massive_eboms_assigned_tmp.txt  min_max.py  min_max_inwork.py  pianificazione_massiva.py  pianificazione_massiva_visualizer_YW.py  pianificazione_massiva_visualizer_YWstatic.py  pmas_configuration.py  pmas_factory.py  pmas_simulator.py  pmas_sql.py  pmas_strategy.py  pmas_util.py  pmas_x_guess_num_sample.py  pmas_x_wl_gem.py  pmas_x_workforce.py  pyproject.toml  run.ps1
pmas_web/: index.html  server.py
pmas_web-250729/: README.md  server.py
